# psonoci

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Cross.toml  Cross_Gitlab.toml  Dockerfile  HELP_OUTPUT_COMPARISON.md  LICENSE  README.md  SECURITY.md  build.rs  capture_help_output.sh  compare_help_output.sh  docker_build.sh  docker_build_linux_musl.sh  rust-toolchain.toml
.cargo/: config  config.toml
.github/workflows/: ci.yml  release.yml
build_files/: Dockerfile-aarch64-unknown-linux-gnu  Dockerfile-aarch64-unknown-linux-musl  Dockerfile-aarch64-unknown-linux-musl-cross  Dockerfile-armv7-unknown-linux-gnueabihf  Dockerfile-armv7-unknown-linux-musleabihf  Dockerfile-x86_64-pc-windows-gnu  Dockerfile-x86_64-unknown-linux-musl  build_cross_linux_images_with_openssl.sh  build_openssl.sh
examples/: Dockerfile-signed
gpg/: psonoci@dfjk.eu
help_command_output.first/current/: api-key_info.txt  config_save.txt  config_show.txt  env-vars_get-or-create.txt  gpg.txt  main.txt  secret.txt  secret_set.txt
help_command_output.first/previous/: api-key_info.txt  api-key_secrets.txt  config_pack.txt  config_save.txt  config_show.txt  env-vars_get-or-create.txt  license.txt  main.txt  run.txt  secret.txt  ssh.txt  ssh_add.txt  totp.txt  totp_get-url.txt
help_command_output.second/clap3_baseline/: config.txt  env-vars.txt  license.txt  ssh.txt
help_command_output.second/clap4/: api-key_info.txt  api-key_secrets.txt  config.txt  env-vars.txt  env-vars_update-or-create.txt  gpg.txt  gpg_sign.txt  license.txt  main.txt  secret_get.txt  totp_get-token.txt  totp_get-url.txt
help_command_output.second/current/: config_pack.txt  gpg_sign.txt  gpg_verify.txt  main.txt  run.txt  ssh_add.txt  totp.txt  totp_get-token.txt
help_command_output.second/previous/: api-key.txt  config.txt  env-vars.txt  env-vars_update-or-create.txt  gpg.txt  gpg_sign.txt  gpg_verify.txt  secret_get.txt  secret_set.txt  totp_get-token.txt  totp_validate-token.txt
help_command_output/current/: api-key.txt  config_pack.txt  config_save.txt  config_show.txt  env-vars_get-or-create.txt  gpg_verify.txt  main.txt  run.txt  secret.txt  secret_set.txt  ssh.txt  ssh_add.txt  totp.txt  totp_validate-token.txt
help_command_output/previous/: api-key.txt  api-key_secrets.txt  env-vars_update-or-create.txt  secret_get.txt  totp_get-url.txt  totp_validate-token.txt
src/: api.rs  config.rs  crypto.rs  env_vars.rs  gpg.rs  lib.rs  license.rs  main.rs  onboarding.rs  opt.rs  passwords.rs  run.rs  secret_provider.rs  sensitive.rs  ssh.rs  totp.rs
test_files/: test.py
tests/: cli_parse.rs
tests/snapshots/: cli_parse__parse_api_key_commands_info.snap  cli_parse__parse_api_key_commands_secrets.snap  cli_parse__parse_api_key_info.snap  cli_parse__parse_api_key_secrets.snap  cli_parse__parse_config_commands_pack.snap  cli_parse__parse_config_commands_save_no_overwrite.snap  cli_parse__parse_config_commands_save_with_overwrite.snap  cli_parse__parse_config_commands_show.snap  cli_parse__parse_config_onboard.snap  cli_parse__parse_config_save.snap  cli_parse__parse_env_vars_commands_get_or_create_minimal.snap  cli_parse__parse_env_vars_commands_get_or_create_with_options.snap  cli_parse__parse_env_vars_commands_update_or_create_minimal.snap  cli_parse__parse_env_vars_commands_update_or_create_with_options.snap  cli_parse__parse_env_vars_get_or_create.snap  (+107 more)
var/: build-windows.ps1  build_windows.ps1  login_gcp.sh  upload_artifacts.sh
