[package]
authors = ["Bernd Kaiser <bk@dfjk.eu>"]
edition = "2021"
name = "psonoci"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }

const_format = "0.2"
hex = "0.4.3"
lazy_static = "1.5"
rand = "0.8"
rayon = "1.11"
rmp = "0.8"
rmp-serde = "1.1"
reqwest = { version = "0.12", features = [
    "blocking",
    "native-tls-vendored",
    "rustls-tls",
    "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

toml = "0.9"
totp-rs = { version = "5.7.0", features = ["otpauth"] }
unicode-segmentation = "1.12"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
crypto_secretbox = { version = "0.2.0-pre.0", default-features = true, features = ["salsa20"] }
russh-keys = { version = "0.49" }
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
tokio = "1.47"
futures = "0.3.31"
pgp = "0.17.0"

[dev-dependencies]
mockall = "0.13.0"
tempfile = "3.13"
